Changes towards version 0.5:
- Fixed fallback in getHomeDir() for when $HOME is not defined on *nix
  - SvdB
- %APPDATA% fallback no longer to "../userdata", but to "./userdata",
  as we don't chdir() to the content dir anymore. - SvdB
- Commander Hayes flickering lights animation now properly reenabled
  when applicable (bug #777) - Alex
- Refactored setupmenu code to use generic widgets - Michael
- Support UTF-8 chars in mineral names (bug #770) - SvdB
- Modified scalers to use surface pitch instead of width - reported to
  fix bug #740 - Michael
- Cleaner build output. Set '$MAKE_VERBOSE' to 1 for old output. - SvdB
- Improved dependency tracking for unix build system. - SvdB
  "./build.sh uqm depend" is only needed for checking for new source files.
- handle "." and ".." in paths - SvdB

Changes towards version 0.4:
- Nicer title image during intro, from Nic
- Installation routine for MacOS X, from Nic.
- Lots and lots of dialog fixes, from Nic.
- Some speech is dependant on whether spoken voices are on, from Nic.
- OpenAL header cleanup. Updating OpenAL may be necessary.
  Windows users should put the OpenAL headers in an AL/ directory
  now too (should be the default). - SvdB
- Improvements to the unix build system for cross-compilation - SvdB
- Do not define ssize_t for MinGW. - SvdB
- Fallback readdir_r() - SvdB
- Attempting to click the screen pops up an error message, from
  Nic, heavily modified (dodge on #533) -Michael
- Fixed potential crash with a truecolor oscilloscope image (thanks
  jdorje) and made it generally more flexible (bug #729) -Alex
- Added missing Tanaka battle portrait images (new artwork; oldcap) and
  minor fixes to other shofixti images (bug #183), from Nic
- Mycon captain portrait finally fixed (bug #183), from Nic
- Saving the game while on autopilot inside an interplanetary system
  will no longer reset the autopilot (bug #725) -Alex
- Main menu and Super Melee menu can now play music tracks; drop in