@@ -1,1 +1,5 @@
 setupmenu.0.png -1 -1 0 0
+setupmenu.1.png -1 -1 0 0
+setupmenu.2.png -1 -1 0 0
+setupmenu.3.png -1 -1 0 0
+
