@@ -1,4 +1,5 @@
 Changes towards version 0.5:
+- Setup menu split into four submenus - Michael
 - Fixed fallback in getHomeDir() for when $HOME is not defined on *nix
   - SvdB
 - %APPDATA% fallback no longer to "../userdata", but to "./userdata",
